[Tianying]fix: change List.of() method to Arrays.asList()